// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test custom className 1`] = `
<div
  className="Pinpoint Author custom-test"
>
  <img
    className="avatar"
    src="https://file.pinpoint.com/6cc744395c563f0072b339070aa327f3;UCGt%3D%3DkE~A%3FZJ6%5EhIpS%23o%5BELE3oLT0I%40t7E2;400x400.png?rw=48&rh=48"
  />
  <span
    className="name"
  >
    Keegan
  </span>
</div>
`;

exports[`Test default 1`] = `
<div
  className="Pinpoint Author "
>
  <img
    className="avatar"
    src="https://file.pinpoint.com/6cc744395c563f0072b339070aa327f3;UCGt%3D%3DkE~A%3FZJ6%5EhIpS%23o%5BELE3oLT0I%40t7E2;400x400.png?rw=48&rh=48"
  />
  <span
    className="name"
  >
    Keegan
  </span>
</div>
`;

exports[`Test no name 1`] = `
<div
  className="Pinpoint Author "
>
  <img
    className="avatar"
    src="https://file.pinpoint.com/6cc744395c563f0072b339070aa327f3;UCGt%3D%3DkE~A%3FZJ6%5EhIpS%23o%5BELE3oLT0I%40t7E2;400x400.png?rw=48&rh=48"
  />
  <span
    className="name"
  />
</div>
`;
